turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:14: error: ':' expected but ')' found.
def setColor(couleur) {
                    ^LangtonsAnt:29: error: identifier expected but '}' found.
}
^